<resources>
    <string name="app_name">SDA Assign02 – 2019 IanCoady</string>
    <string name="open_camera">Implicit Intent: Open Camera</string>
    <string name="view_picture">Implicit Intent: View Picture</string>
    <string name="call_activity">Explicit intent: Call an activity</string>
    <string name="button_string">Send</string>
    <string name="save_button">Save</string>
    <string name="email_detail" />
    <string name="default_email_text">To:</string>
    <string name="default_subject_text">Subject:</string>
    <string name="default_content_text">Content:</string>
</resources>
